media/gpu/ipc/service/gpu_jpeg_decode_accelerator.cc
@@ -33,10 +33,11 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #if defined(ARCH_CPU_X86_FAMILY)
 #include "media/gpu/vaapi_jpeg_decode_accelerator.h"
 #endif
-#if defined(USE_V4L2_CODEC)
+#if defined(USE_V4L2_CODEC) && defined(ARCH_CPU_ARM_FAMILY)
 #include "media/gpu/v4l2_device.h"
 #include "media/gpu/v4l2_jpeg_decode_accelerator.h"
 #endif
+
 #endif
 
 namespace {
@@ -44,7 +45,8 @@ namespace {
 std::unique_ptr<media::JpegDecodeAccelerator> CreateV4L2JDA(
     scoped_refptr<base::SingleThreadTaskRunner> io_task_runner) {
   std::unique_ptr<media::JpegDecodeAccelerator> decoder;
-#if defined(OS_CHROMEOS) && defined(USE_V4L2_CODEC)
+#if defined(OS_CHROMEOS) && defined(USE_V4L2_CODEC) && \
+    defined(ARCH_CPU_ARM_FAMILY)
   scoped_refptr<media::V4L2Device> device = media::V4L2Device::Create();
   if (device)
     decoder.reset(new media::V4L2JpegDecodeAccelerator(
